feat:implemented stripe payment gateway for payment
